--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-        "module": "esNext",
+        "module": "es2020",
         "target": "ES6",
 		"moduleResolution": "node",
 		"strict": true,
